# attn-pool-dom

./: .gitignore  README.md  REPORT.md  pyproject.toml
configs/: default.yaml
experiments/: README.md  caa.py  refusal.py
results/: entity_concept.md  official_pipeline_attn.md  persona_vectors.md  persona_vectors_evil.md  sleeper_backdoor.md  style_vectors.md
results/caa/: caa_baseline_L13.json  caa_baseline_L13_raw.json  caa_baseline_L15_raw.json  caa_sweep_L12_unit.json
results/refusal/: refusal_baseline_L14.json  refusal_sweep_L10.json  refusal_sweep_prompt_L10.json  refusal_sweep_response_L10.json
scripts/: fetch_data.py  plot_results.py  remote_setup.sh  smoke_test.py
scripts/official/: caa_gen_attn_vectors.py  entity_debug.py  entity_detect.py  entity_locator.py  entity_steer.py  persona_patch_attn.py  refusal_gen_attn.py  sleeper_attn_diag.py  sleeper_jsdc.py  sleeper_jsdc_examples.py  sleeper_jsdc_seeds.py  sleeper_jsdc_steer.py  sleeper_jsdc_steer_seeded.py  sleeper_pooling_compare.py  sleeper_pooling_v2.py  sleeper_verify.py  style_get_activations_pooled.py  style_steer_compare.py
src/attn_pool_dom/: __init__.py  data.py  eval.py  generate.py  harvest.py  model.py  pipeline.py  pooling.py  steering.py
tests/: test_pooling.py
