[project]
name = "attn-pool-dom"
version = "0.1.0"
description = "Attention-weighted pooling for difference-of-means contrastive activation steering"
readme = "README.md"
authors = [
    { name = "jamie-stephenson", email = "jamie.t.stephenson@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # NOTE: heavy deps are installed on the remote A100 only (uv sync there).
    # Do not `uv sync` on the local Mac.
    "torch>=2.3",
    "transformer-lens>=2.0",
    "transformers>=4.44",
    "accelerate>=0.30",
    "datasets>=2.20",
    "numpy>=1.26",
    "pandas>=2.2",
    "einops>=0.8",
    "jaxtyping>=0.2",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "huggingface-hub>=0.24",
    "pyyaml>=6.0",
]

[project.scripts]
attn-pool-dom = "attn_pool_dom:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipython>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
