[project]
name = "attn-pool-dom"
version = "0.1.0"
description = "Attention-weighted pooling for difference-of-means steering vectors (persona/style)"
readme = "README.md"
authors = [
    { name = "jamie-stephenson", email = "jamie.t.stephenson@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Just the pooling core. Replications run in the upstream repos' own envs on
    # the remote A100; do not `uv sync` heavy ML deps on the local Mac.
    "torch>=2.3",
    "numpy>=1.26",
]

[project.scripts]
attn-pool-dom = "attn_pool_dom:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipython>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
